# agent-eval-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: mock_agent.py
backend/: database.py  main.py  models.py
benchmarks/: mock_benchmark.py
core/: plugin.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
tests/: test_api.py
